--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.20",
     "next": "16.1.6",
+    "open-weather-icons": "^0.0.8",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
